--- a/partials/add-song.html
+++ b/partials/add-song.html
@@ -1,58 +1,26 @@
 <form>
-  <div>
-    <div class="form-group">
-      <label for="songName">Song title: </label>
-      <input type="text" id="songName" ng-model="newSong.songName">
-    </div>
-    <div class="form-group">
-      <label for="artistName">Artist:</label>
-      <input type="text" id="artistName" ng-model="newSong.artistName">
-    </div>
-    <div class="form-group">
-      <label for "albumName">Album:</label>
-      <input type="text" id="albumName" ng-model="newSong.albumName">
-    </div>
-    <div class="form-group">
-      <div class="btn-group" role="group" aria-label="..." ng-model="newSong.genre">
-        <button type="button" class="btn btn-default genre" value="Rock">Rock</button>
-        <button type="button" class="btn btn-default genre" value="Pop">Pop</button>
-        <button type="button" class="btn btn-default genre" value="Blues">Blues</button>
-        <button type="button" class="btn btn-default genre" value="Classical">Classical</button>
-        <button type="button" class="btn btn-default genre" value="Jazz">Jazz</button>
-        <button type="button" class="btn btn-default genre" value="Hip-Hop">Hip-Hop</button>
-      </div>
-    </div>
-    <button ng-click="addSong()">Create</button>
-    <button ng-click="closeAddSong()">Close</button>
+  <div class="form-group">
+    <label for="songName">Song title: </label>
+    <input type="text" id="songName" class="form-control" placeholder="Song Name" ng-model="newSong.songName">
   </div>
+  <div class="form-group">
+    <label for="artistName">Artist:</label>
+    <input type="text" id="artistName" class="form-control" placeholder="Artist Name" ng-model="newSong.artistName">
+  </div>
+  <div class="form-group">
+    <label for "albumName">Album:</label>
+    <input type="text" id="albumName" class="form-control" placeholder="Album Name" ng-model="newSong.albumName">
+  </div>
+  <div class="form-group">
+    <div class="btn-group" role="group" aria-label="..." ng-model="newSong.genre">
+      <button type="button" class="btn btn-default genre" value="Rock">Rock</button>
+      <button type="button" class="btn btn-default genre" value="Pop">Pop</button>
+      <button type="button" class="btn btn-default genre" value="Blues">Blues</button>
+      <button type="button" class="btn btn-default genre" value="Classical">Classical</button>
+      <button type="button" class="btn btn-default genre" value="Jazz">Jazz</button>
+      <button type="button" class="btn btn-default genre" value="Hip-Hop">Hip-Hop</button>
+    </div>
+  </div>
+  <button type="button" class="btn btn-default" ng-click="addSong()">Create</button>
+  <button type="button" class="btn btn-default" ng-click="closeAddSong()">Close</button>
 </form>
-
-
-
-
-
-<!-- <form>
-        <div class="form-group">
-          <label for="songNameInput">Song Name</label>
-          <input type="text" class="form-control" id="songNameInput" placeholder="Song Name">
-        </div>
-        <div class="form-group">
-          <label for="artistNameInput">Artist Name</label>
-          <input type="text" class="form-control" id="artistNameInput" placeholder="Artist Name">
-        </div>
-        <div class="form-group">
-          <label for="albumNameInput">Album Name</label>
-          <input type="text" class="form-control" id="albumNameInput" placeholder="Album Name">
-        </div>
-        <div class="form-group">
-        <div class="btn-group" role="group" aria-label="...">
-          <button type="button" class="btn btn-default genre" value="Rock">Rock</button>
-          <button type="button" class="btn btn-default genre" value="Pop">Pop</button>
-          <button type="button" class="btn btn-default genre" value="Blues">Blues</button>
-          <button type="button" class="btn btn-default genre" value="Classical">Classical</button>
-          <button type="button" class="btn btn-default genre" value="Jazz">Jazz</button>
-          <button type="button" class="btn btn-default genre" value="Hip-Hop">Hip-Hop</button>
-        </div>
-        </div>
-        <button type="button" id="addMusicButton" class="btn btn-default">Default</button>
-      </form> -->
