--- a/partials/song-list.html
+++ b/partials/song-list.html
@@ -1,26 +1,30 @@
 <div id="left-panel" class="col-xs-12 col-s-3 col-md-3">
-  <div class="form-group">
-    <label for="artistFilter" class="col-sm-12 control-label">Artist:</label>
-    <div class="col-sm-11 col-md-offset-1">
-      <select id="artistFilter"
-        ng-model="theArtistList"
-        ng-options="value.artistName for value in songlist | unique: 'artistName' | orderBy: 'artistName'">
-        <option selected disabled>Options</option>
-      </select>
+  <form>
+    <div class="form-group">
+      <label for="artistFilter" class="col-sm-12 control-label">Artist:</label>
+      <div class="col-sm-11 col-md-offset-1">
+        <select id="artistFilter" class="form-control"
+          ng-model="theArtistList"
+          ng-options="value.artistName for value in songlist | unique: 'artistName' | orderBy: 'artistName'">
+          <option selected disabled>Options</option>
+        </select>
+      </div>
     </div>
-  </div>
 
-  <div class="form-group">
-    <label for="albumFilter" class="col-sm-12 control-label">Album:</label>
-    <div class="col-sm-11 col-md-offset-1">
-      <select id="albumFilter"
-        ng-model="theAlbumList"
-        ng-options="value.albumName for value in songlist | unique: 'albumName' | filter: {artistName: theArtistList.artistName}">
-        <option selected disabled>Options</option>
-      </select>
+    <div class="form-group">
+      <label for="albumFilter" class="col-sm-12 control-label">Album:</label>
+      <div class="col-sm-11 col-md-offset-1">
+        <select id="albumFilter" class="form-control"
+          ng-model="theAlbumList"
+          ng-options="value.albumName for value in songlist | unique: 'albumName' | filter: {artistName: theArtistList.artistName}">
+          <option selected disabled>Options</option>
+        </select>
+      </div>
     </div>
-  </div>
-  <button type="button">Clear Filter</button>
+    <div class="form-group">
+      <button type="button" class="btn btn-default" ng-click="clearFilter()">Clear Filter</button>
+    </div>
+  </form>
   <div class="form-group">
     <a href="#/addsong">Add Song</a>
   </div>
