--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,54 @@
+@import url("https://fonts.googleapis.com/css?family=Merriweather|Lato");
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0; }
 
+body {
+  font: 1.5rem Lato, sans-serif;
+  padding-top: 70px; }
+
+footer, header, nav, section {
+  display: block; }
+
+label {
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin: 0;
+  padding: 0; }
+
+a {
+  background-color: transparent; }
+
+a:active,
+a:hover {
+  outline: 0; }
+
+section button,
+section input,
+section optgroup,
+section select,
+section textarea {
+  color: inherit;
+  font: inherit;
+  margin: 10px; }
+section button {
+  overflow: visible; }
+section button,
+section select {
+  text-transform: none; }
+section optgroup {
+  font-weight: bold; }
+
+h1, h2, h3, h4, h5, h6 {
+  font-face: Merriweather; }
+
+.media h1, .media h2, .media h3, .media h4, .media h5, .media h6 {
+  font-face: Merriweather; }
+.media .media-body {
+  padding-left: 10px; }
+  .media .media-body p {
+    font-size: 1.2rem; }
 
 /*# sourceMappingURL=main.css.map */
